<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/bill_amount"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ebAmount"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/bill_amt"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/e_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ebAmount"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/regService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/regular"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/sad" />

        <ImageButton
            android:id="@+id/goodService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/good"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/happy" />

        <ImageButton
            android:id="@+id/excService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/exc"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/happiest" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/e_box"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="#FA0C0B0B" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/serviceRating"
        android:textSize="18sp"
        tools:text="@string/serviceRating" />

    <LinearLayout
        android:id="@+id/rate_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/main_msg_tipPercent" />

        <TextView
            android:id="@+id/tip_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/main_msg_tipTotal" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rate_box"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="#FC161515" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/final_amt"
            android:textColor="#049C87" />

        <TextView
            android:id="@+id/billTotalAmt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/billTotalAmount"
            android:textColor="#009688"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>